# rust_grpc

./: .gitignore
backend/: Cargo.toml  build.rs
backend/proto/: backend.proto
backend/src/: backend.rs  main.rs
grpc_tester/: backend_pb2.py  backend_pb2_grpc.py  gui_faker.py
